# EchoMinutes-Agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini
.codex/: README.md
.codex/rules/: development.md  environment.md  project.md  tooling.md
.codex/skills/echominutes-backend/: SKILL.md
.codex/skills/echominutes-desktop-ui/: SKILL.md
.codex/skills/echominutes-planning/: SKILL.md
.codex/skills/fastapi-patterns/: SKILL.md
.codex/skills/python-patterns/: SKILL.md
.codex/skills/vue-best-practices/: SKILL.md
.codex/skills/vue-router-best-practices/: SKILL.md
.github/workflows/: ci.yml  package-windows.yml
apps/: package.json
apps/electron/main/: index.ts
apps/electron/preload/: index.ts
apps/renderer/src/: env.d.ts
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py  export.py  (+5 more)
backend/tests/: conftest.py  test_dashscope_providers.py  test_exports.py  test_health.py  test_logs.py  test_media_preprocess.py  test_meetings.py  test_notes.py  test_transcription.py  test_workflow_chain.py
docs/: EchoMinutes-Agent.md  INSTALL.md  ROADMAP.md  STRUCTURE.md
docs/releases/: v0.1.0.md
frontend/: electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/renderer/: index.html
scripts/: backend_launcher.py  dev.ps1  dev.sh
workspace.example/: README.md
(+83 files in other folders)
