[project]
name = "echominutes-backend"
version = "0.1.0"
description = "Local FastAPI backend for EchoMinutes-Agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dashscope>=1.20.14",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "imageio-ffmpeg>=0.6.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
